# Argus

./: .gitignore  README.md
argus/: .env.example  .gitignore  LICENSE  README.md  config.py  pyproject.toml  requirements.txt
argus/agents/: mcp_connection.py  orchestrator.py  run_live.py  run_offline_demo.py  sub_agents.py
argus/cli/: argus_cli.py
argus/dashboard/: app.py
argus/dashboard/static/: index.html
argus/data/: sample_portscan.pcap
argus/deploy/: Dockerfile  README.md  docker-compose.yml
argus/docs/: ARCHITECTURE.md  KAGGLE_WRITEUP.md  VIDEO_SCRIPT.md
argus/mcp_server/: ioc_intel.py  mitre_mapping.py  pcap_forensics.py  playbooks.py  server.py
argus/ml/: flow_features.py  model.py
argus/scripts/: make_sample_pcap.py  train_model.py
argus/security/: guardrails.py
argus/tests/: test_core.py
